Fix ad width on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -234,6 +234,11 @@ a.border-decoration:hover {
 }
 
 /* ads */
+.ads {
+  max-width: 340px;
+  margin: auto;
+}
+
 .ads img {
   width: 100%;
   height: 180px;
@@ -351,6 +356,10 @@ input {
 
   .object-fit-cover {
     height: 180px;
+  }
+
+  .ads {
+    width: 100%;
   }
 }
 
